# grpc

./: Cargo.toml  LICENSE  README.md  buf.yaml  build.rs
proto/fact/v1/: chuck_norris.proto
proto/greeter/v1/: say_hello.proto
proto/helloworld/: hello_world.proto
src/: fact.rs  greeter.rs  server.rs
src/fact/: v1.rs
src/fact/v1/fact/: server.rs
src/greeter/: v1.rs
src/greeter/v1/say_hello/: server.rs
src/server/v1/: greeter.rs
src/server/v1/greeter/: say_hello.rs
